<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/primary_settings"
        android:orderInCategory="100"
        android:title="@string/menu_elo_values"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/reset_menu_button"
        android:orderInCategory="100"
        android:title="@string/menu_reset_button"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/theme_picker_button"
        android:orderInCategory="100"
        android:title="@string/menu_theme_button"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/theme_picker_default"
                android:orderInCategory="100"
                android:title="@string/menu_theme_default"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/theme_picker_blue"
                android:orderInCategory="100"
                android:title="@string/menu_theme_blue"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/theme_picker_grey"
                android:orderInCategory="100"
                android:title="@string/menu_theme_grey"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/theme_picker_purple"
                android:orderInCategory="100"
                android:title="@string/menu_theme_purple"
                app:showAsAction="never"></item>


        </menu>

    </item>

</menu>