<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="@bool/pref_season_initialized_default"
        android:key="@string/settings_season_initialized_key"
        android:title="@string/settings_season_intialized_title" />

    <CheckBoxPreference
        android:defaultValue="@bool/pref_playoffs_started_default"
        android:key="@string/settings_playoffs_started_key"
        android:title="@string/settings_playoffs_started_title" />

    <ListPreference
        android:defaultValue="@integer/settings_value_week_one"
        android:entries="@array/settings_week_number_labels"
        android:entryValues="@array/settings_week_number_values"
        android:key="@string/settings_week_num_key"
        android:title="@string/settings_week_number_title">
    </ListPreference>


</PreferenceScreen>