<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    style="?normalActivity">

    <ImageView
        android:id="@+id/main_menu_logo"
        android:layout_width="wrap_content"
        android:layout_height="256dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/logo_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="?normalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_menu_sim_season_button"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/main_menu_sim_season"
        android:background="@drawable/ic_main_menu_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_logo" />

    <Button
        style="?normalButton"
        android:id="@+id/main_menu_predict_matchup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/main_menu_predict_matchup"
        android:background="@drawable/ic_main_menu_button"
        app:layout_constraintStart_toStartOf="@+id/main_menu_sim_season_button"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_sim_season_button" />

    <Button
        style="?normalButton"
        android:id="@+id/main_menu_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_main_menu_button"
        android:text="@string/main_menu_settings"
        app:layout_constraintStart_toStartOf="@+id/main_menu_predict_matchup_button"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_predict_matchup_button" />





</android.support.constraint.ConstraintLayout>