<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchPredictorActivity"
    style="?normalActivity">

    <View
        android:id="@+id/matchup_middle_divider"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></View>


    <TextView
        style="?normalHeaderTextView"
        android:id="@+id/match_predict_team_one_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/match_predict_team_one"
        app:layout_constraintEnd_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/match_predict_team_one_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/match_predict_team_one_header"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_one_header"></Spinner>

    <ImageView
        android:id="@+id/match_predict_team_one_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_one_spinner" />

    <TextView
        style="?normalScoreTextView"
        android:id="@+id/match_predict_team_one_elo_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_predict_elo_header"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_one_image"
        />

    <TextView
        style="?normalTextView"
        android:id="@+id/match_predict_team_one_elo_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1500"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_one_elo_header"
        />

    <TextView
        style="?normalScoreTextView"
        android:id="@+id/match_predict_team_one_odds_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_predict_odds_to_win_header"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_one_elo_value"
        />

    <TextView
        style="?normalTextView"
        android:id="@+id/match_predict_team_one_odds_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="50%"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_one_odds_header"
        />

    <TextView
        style="?normalHeaderTextView"
        android:id="@+id/match_predict_team_one_score_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_predict_score_header"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_one_odds_value"/>

    <TextView
        style="?normalHeaderTextView"
        android:id="@+id/match_predict_team_one_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="0"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_one_score_header"/>

    <TextView
        style="?normalHeaderTextView"
        android:id="@+id/match_predict_team_two_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/match_predict_team_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/matchup_middle_divider"
        app:layout_constraintTop_toTopOf="@+id/match_predict_team_one_header"/>

    <Spinner
        android:id="@+id/match_predict_team_two_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/match_predict_team_two_header"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_two_header"></Spinner>

    <ImageView
        android:id="@+id/match_predict_team_two_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_two_spinner" />

    <TextView
        style="?normalScoreTextView"
        android:id="@+id/match_predict_team_two_elo_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_predict_elo_header"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_two_image"
        />

    <TextView
        style="?normalTextView"
        android:id="@+id/match_predict_team_two_elo_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1500"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_two_elo_header"
        />

    <TextView
        style="?normalScoreTextView"
        android:id="@+id/match_predict_team_two_odds_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_predict_odds_to_win_header"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_two_elo_value"
        />

    <TextView
        style="?normalTextView"
        android:id="@+id/match_predict_team_two_odds_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1500"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_two_odds_header"
        />

    <TextView
        style="?normalHeaderTextView"
        android:id="@+id/match_predict_team_two_score_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_predict_score_header"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_two_odds_value"/>

    <TextView
        style="?normalHeaderTextView"
        android:id="@+id/match_predict_team_two_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="0"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/matchup_middle_divider"
        app:layout_constraintTop_toBottomOf="@id/match_predict_team_two_score_header"/>

    <Button
        style="?normalButton"
        android:id="@+id/match_predict_simulate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/match_predict_simulate_match"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_predict_team_one_score_value" />

    <ImageView
        style="?normalButton"
        android:id="@+id/match_predict_swap_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_swap_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/match_predict_team_one_odds_header" />





</android.support.constraint.ConstraintLayout>